--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-154/>
+【非真實地場】資料(154)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「感覺。。我想問你一個問題」他說。
+「說」她說。 「你覺得說話多的和。。說話少的。。哪種感覺更靈敏些？」他說。
+「你是說。。包括動物？」她說。
+「對，所有，萬事萬物，那種感覺最靈敏」他說。 「這個時代。。最靈敏的。。恐怕不說話的那些感覺最靈敏」她說。
+「不說話的？」他說。
+「是的，貓、狗都不說話，有些甚至叫的都不多，相比現在的人，他們靈敏的多」她說。
+「確實」他說。
+「還有嬰兒。。還有那些智障兒」她說。
+「他們。。他們的感覺更靈敏？這個的原理是？」他說。
+「我想是的。。恩。。他們的某些本能可能沒有被破壞」她說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 16, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-153/>
 【非真實地場】資料(153)
 </a>
@@ -177,21 +201,6 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 那個男人說我的表演只局限在一個場地？這是我主要的場地，我稱之為主場，就像書的主題、主風格，這是事實。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 16, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-144/>
-【非真實地場】資料(144)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-自信，只有女人討論這個話題嗎？ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 16, 2021</time>
