--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-326/>
+【非真實地場】資料(326)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 甘單學步(甘单学步)&ndash;甘愿独自一个人学滨崎步。形容成为明星的决心。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 21, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-325/>
 【非真實地場】資料(325)
 </a>
@@ -166,20 +180,6 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 同心同得&ndash;同樣的心靈，同樣的結果。形容命運的相似。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 20, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-316/>
-【非真實地場】資料(316)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 前途妹卜&ndash;前途是妹妹算出來的。形容家人的準確預言。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 20, 2021</time>
