--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-寸步雄行&ndash;做出偉大的行為，腳卻只動了一寸。形容神人。
+新步自封&ndash;封自己為新時代的濱崎步。形容少女模仿他國歌姬的神態。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -68,10 +68,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-成功學原理(數字珍藏版)
-&mldr;&mldr;
-好的名字是成功的13.33%~93.33%
-&mldr;&mldr;
+寸步雄行&ndash;做出偉大的行為，腳只動了一寸。形容壯舉。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
