--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-大謝可擊(天谢可击)&ndash;他對普通人感謝的很厲害，可以攻擊他虛偽。形容黑白顛倒。
+大謝可擊(天谢可击)&ndash;他對普通人大大的感謝，可以攻擊他虛偽。形容黑白顛倒。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
